Fixed overflow breaking page print

--- a/ui/scss/core/_print.scss
+++ b/ui/scss/core/_print.scss
@@ -12,6 +12,9 @@
 
   * {
     color: #000 !important; /* Black prints faster: h5bp.com/s */
+    overflow: initial !important;
+    width: auto !important;
+    height: auto !important;
     text-shadow: none !important;
     background: transparent !important;
     box-shadow: none !important;
